[package]
name = "tcp_echoer"
version = "0.1.0"
authors = ["Emmanuel Bosquet <bjokac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
rand = "0.8.3"
bytes = "1"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.14"

[dependencies.uuid]
version = "^0.8"
features = ["v4"]


[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
name = "lib"
path = "src/lib.rs"
