[package]
name = "tcp_echoer"
version = "0.1.0"
authors = ["Emmanuel Bosquet <bjokac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bincode = "1.0"
bytes = "1"
futures = "0.3.14"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5.0", features = ["full"] }
tracing = { version = "^0.1", default-features = false }
tracing-subscriber = "0.2.0"
uuid = { version = "^0.8", features = ["v4"] }


[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
name = "lib"
path = "src/lib.rs"
